<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/spacing_4"
        android:padding="@dimen/spacing_4"
        android:elevation="@dimen/spacing_4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/item">

            <View
                android:id="@+id/viewColor"
                android:layout_width="@dimen/spacing_4"
                android:layout_height="match_parent"
                android:background="@color/lightGray"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/com_facebook_likeview_text_size"
                android:layout_gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTextMedium"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/spacing_4"
                    android:text="@string/vvs"/>

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTextSmall"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/weight"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="@dimen/bottom_sheet_divider_indent"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHigh"
                    style="@style/AppTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="55dp"
                    android:text="@string/high_rate" />

                <TextView
                    android:id="@+id/tvLow"
                    style="@style/AppTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="55dp"
                    android:text="@string/low_rate" />

                <TextView
                    android:id="@+id/tvPrice"
                    style="@style/AppTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>
