<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/fab_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProfileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottom_sheet_drawable_padding"
                android:contentDescription="@string/nav_header_desc"
                android:elevation="@dimen/bottom_sheet_divider_height"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_title"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nav_header_subtitle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:background="@drawable/gray_round_btn"
                    android:paddingStart="@dimen/fab_margin"
                    android:paddingEnd="@dimen/fab_margin"
                    android:text="@string/profile"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="@style/AppTextMedium"
            android:layout_marginLeft="@dimen/bottom_sheet_divider_height"
            android:layout_gravity="center"
            android:padding="@dimen/bottom_sheet_divider_indent"
            android:text="@string/please_select_product"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_divider_indent"
            android:padding="@dimen/bottom_sheet_divider_indent" />

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="1200dp"
            android:listSelector = "@drawable/selector_list_item"
            android:scrollbars="vertical" />

    </LinearLayout>
</layout>
