<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        android:layout_marginTop="@dimen/top_margin"
        tools:context=".views.admin.views.offers.AddOfferActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewOfferContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_offer"
                android:drawablePadding="@dimen/fab_margin"
                android:drawableLeft="@drawable/ic_offer"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/fab_margin"
                android:drawableStart="@drawable/ic_price_24dp"
                android:hint="@string/provide_price" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/fab_margin"
                android:drawableStart="@drawable/ic_text_format_black_24dp"
                android:hint="@string/other" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUploadNewOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:textStyle="bold"
            android:background="@drawable/rectangle_shape"
            android:text="@string/add_new_offer"
            />

    </LinearLayout>

</layout>