<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/adminContainer"
        tools:context=".views.admin.views.sticky_crud.CRUDActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bottom_sheet_drawable_padding"
                android:orientation="vertical">

                <!--Color Layout-->

                <TextView
                    android:id="@+id/tvColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTextMedium"
                    android:paddingStart="@dimen/bottom_sheet_divider_indent"
                    android:text="@string/app_error"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/colorRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bottom_sheet_divider_indent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/top_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutProduct"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorAccent"
                            style="@style/AppTextSmall">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etProduct"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapWords"
                                android:hint="@string/product" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutProductWeight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorAccent"
                            style="@style/AppTextSmall">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etProductWeight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:hint="@string/weight" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputHighPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etHighPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin"
                            android:inputType="number"
                            android:hint="@string/provide_hight_price" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutLowPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLowPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:layout_marginTop="@dimen/fab_margin"
                            android:hint="@string/provide_low_price" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:layout_marginTop="@dimen/fab_margin"
                            android:hint="@string/provide_price" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/add_product"/>

    </RelativeLayout>
</layout>